@@ -4,6 +4,7 @@ Version 0.6.0~dev
 	* AVInfo class code cleanup.
 	* Ignore empty string as argument value in Worker.get_args.
 	* Add worker configuration system, closes: #5764.
+	* Update ffmpeg worker API.
 
 Version 0.5.0 Released on 2012/03/29
 
